minor possible errors eliminated

--- a/Meteor/client/admin/views/adminView.ng.html
+++ b/Meteor/client/admin/views/adminView.ng.html
@@ -8,7 +8,7 @@
     </div>
     
     <input type="email" id="inputEmail" class="form-control" placeholder="E-Mail-Adresse" ng-model="email" required autofocus>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Passwort" ng-model="password">
+    <input type="password" id="inputPassword" class="form-control" placeholder="Passwort" ng-model="password" required>
     <div class="checkbox">
     </div>
     <input type="submit" class="btn btn-lg btn-primary btn-block" ng-click="login()" value="Anmelden">
