remove maxHeight from the controller to prevent unnecessary restarts

--- a/Meteor/client/admin/views/adminView.ng.html
+++ b/Meteor/client/admin/views/adminView.ng.html
@@ -35,6 +35,7 @@
 						<li><a href="" ng-click="calibrateCheckPoint2()">Checkpoint 2 kalibrieren</a></li>
 						<li><a href="" ng-click="calibrateCheckPoint3()">Checkpoint 3 kalibrieren</a></li>
 						<li><a href="" ng-click="calibrateMaxHeight()">Maximalhöhe kalibrieren</a></li>
+						<li><a href="" ng-click="removeMaxHeight()">Maximalhöhe zurücksetzen</a></li>
 						<li class="divider"></li>
 						<li><a href="" ng-click="logout()">Logout</a></li>
 					</ul>
