--- a/Meteor/client/style.less
+++ b/Meteor/client/style.less
@@ -50,17 +50,13 @@ body, html, .meteorBody {
 	bottom: 0;
 }
 
-.form-signin {
+.admin-form {
 	max-width: 330px;
 	padding: 15px;
 	margin: 0 auto;
 	
-	.form-signin-heading, .checkbox {
+	.admin-form-heading {
 		margin-bottom: 10px;
-	}
-	
-	.checkbox {
-		font-weight: normal;
 	}
 	
 	.form-control {
@@ -77,7 +73,7 @@ body, html, .meteorBody {
 		}
 	}
 	
-	input[type="email"] {
+	input[type="text"] {
 		margin-bottom: -1px;
 		border-bottom-right-radius: 0;
 		border-bottom-left-radius: 0;
